--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Logi -->
+    <link rel="icon" type="image/x-icon" href="malelogo.png">
+
 </head>
 <body>
         <section>
