--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Logi -->
+    <!-- Logo -->
     <link rel="icon" type="image/x-icon" href="malelogo.png">
 
 </head>
