--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <button type="button" class="btn btn-danger btn-lg" onClick="window.location.reload();">ROLL</button>
         <footer>
-            <a href="https:/github.com/Igi-it/" target="_blank">Igor Večeřa, IT2</a>           
+            <a href="https://github.com/Igi-it" target="_blank">Igor Večeřa, IT2</a>           
         </footer>
         <script src="index.js"></script>
 </body>
